Fix map gaps

--- a/components/Game/Map/MapGUI.module.css
+++ b/components/Game/Map/MapGUI.module.css
@@ -56,8 +56,8 @@
 .chunk {
     display: flex;
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: calc(100% + 2px);
+    height: calc(100% + 2px);
     flex-wrap: wrap;
 }
 
